--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -41,6 +41,7 @@ header {
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
+  height: 5.3rem;
 }
 
 header .content {
@@ -51,14 +52,20 @@ header .content {
 
 header .logo {
   flex: 1;
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: #4a4a4a;
 }
 
 header nav ul {
   display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 nav li {
   padding-left: 3.5rem;
+  list-style: none;
 }
 
 nav a {
@@ -66,6 +73,7 @@ nav a {
   line-height: 1.6;
   font-size: 1rem;
   color: #4a4a4a;
+  text-decoration: none;
 }
 
 header .icon {
