--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -42,6 +42,8 @@ header {
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
   height: 5.3rem;
+  z-index: 100;
+  top: 0;
 }
 
 header .content {
