--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -273,13 +273,20 @@ header .mobile {
 }
 
 .feature h2 {
+  margin-top: 2.5rem;
+  margin-bottom: 0;
   padding-bottom: .5rem;
   font-size: 2.25rem;
   font-weight: bold;
   color: #4a4a4a;
 }
 
+.content {
+  height: 7.19rem;
+}
+
 .feature h3 {
+  margin: 0;
   font-size: 1rem;
   line-height: 1.2;
   font-weight: 300;
